--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -5,6 +5,16 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply from: 'versioning/version_tasks.gradle'
 group = 'com.microsoft.identity.client'
+apply plugin: 'jacoco'
+
+jacoco {
+    toolVersion = '0.8.5'
+    reportsDir = file("$buildDir/reports/unitTests")
+}
+
+tasks.withType(Test) {
+    jacoco.includeNoLocationClasses = true
+}
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -22,11 +32,11 @@ android {
 
     buildTypes {
         debug {
-            testCoverageEnabled false
+            testCoverageEnabled true
             debuggable true
         }
         release {
-            testCoverageEnabled false
+            testCoverageEnabled true
             minifyEnabled false
             debuggable false
             consumerProguardFiles 'consumer-rules.pro'
@@ -122,6 +132,54 @@ task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
     classifier = 'sources'
     destinationDir = reporting.file("$project.buildDir/outputs/jar/")
+}
+
+task createMsalCoverageReportTask() {
+    group = "Msal Reporting"
+    description = "Generate Coverage Report tasks for every build Flavour"
+
+    def buildTypes = android.buildTypes.collect { type ->
+        type.name
+    }
+    def productFlavors = android.productFlavors.collect { flavor ->
+        flavor.name
+    }
+    // When no product flavors defined, use empty string
+    if (!productFlavors) productFlavors.add('')
+    productFlavors.each { productFlavorName ->
+        buildTypes.each { buildTypeName ->
+            def sourceName
+            if (!productFlavorName) {
+                sourceName = "${buildTypeName}"
+            } else {
+                sourceName = "${productFlavorName}${buildTypeName.capitalize()}"
+            }
+            def testTaskName = "test${sourceName.capitalize()}UnitTest"
+
+            // Tasks for generating Coverage reports for every sourceName
+            task "${sourceName}MsalCoverageReport" (type:JacocoReport, dependsOn: ["$testTaskName", "create${sourceName.capitalize()}CoverageReport"]) {
+                group = "Msal Reporting"
+                description = "Generate Msal Coverage Reports(UnitTest & AndroidTests) on the ${sourceName.capitalize()}"
+
+                def coverageSourceDirs = "${projectDir}/src/main/java"
+                def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test.*']
+                def javaClasses = fileTree(
+                        dir: "${buildDir}/intermediates/javac/${sourceName}/classes",
+                        excludes: fileFilter
+                )
+                sourceDirectories.from = files([coverageSourceDirs])
+                additionalSourceDirs.from = files(coverageSourceDirs)
+                classDirectories.from = files([javaClasses])
+                executionData.from = fileTree(dir: "$buildDir", includes: [
+                        "jacoco/${testTaskName}.exec"
+                ])
+                reports {
+                    xml.enabled = true
+                    html.enabled = true
+                }
+            }
+        }
+    }
 }
 
 dependencies {
