--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -113,15 +113,11 @@ task javadoc(type: Javadoc) {
 
 // Task to generate javadoc.jar
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
     from javadoc.destinationDir
-    destinationDir = reporting.file("$project.buildDir/outputs/jar/")
 }
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
-    destinationDir = reporting.file("$project.buildDir/outputs/jar/")
 }
 
 dependencies {
@@ -278,7 +274,7 @@ publishing {
 
 tasks.whenTaskAdded { task ->
     if (task.name.contains('assemble')) {
-        task.dependsOn 'checkstyle', 'pmd'
+        task.dependsOn 'pmd'
     }
 
     if (task.name.contains('assemble')
