Looks like travis adds the sdk manager bin folder to the path

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ android:
 
 before_install:
   - chmod +x gradlew
-  - ~/Android/Sdk/tools/bin/sdkmanager --licenses
+  - sdkmanager --licenses
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
