--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ sudo: true
 # Build Variables
 env:
   global:
-    - BUILD_TOOLS_VERSION=27.0.3
-    - COMPILE_SDK_VERSION=27
+    - BUILD_TOOLS_VERSION=28.0.3
+    - COMPILE_SDK_VERSION=28
     - EMULATOR_API_VERSION=21
 
     # This is to guarantee a clean gradle log
@@ -19,8 +19,6 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-$BUILD_TOOLS_VERSION
-    - android-$COMPILE_SDK_VERSION
     - extra-google-m2repository
 
     ## Emulator config ##
@@ -32,6 +30,8 @@ android:
 
 before_install:
   - chmod +x gradlew
+  - yes | sdkmanager "platforms;android-28"
+  - yes | sdkmanager "build-tools;28.0.3"
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
