--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
   global:
     - BUILD_TOOLS_VERSION=29.0.3
     - COMPILE_SDK_VERSION=29
-    - EMULATOR_API_VERSION=25
+    - EMULATOR_API_VERSION=29
 
     # This is to guarantee a clean gradle log
     - TERM=dumb
@@ -21,17 +21,11 @@ android:
     - platform-tools
     - extra-google-m2repository
 
-    ## Emulator config ##
-    # The SDK version used for the emulator
-    - android-$EMULATOR_API_VERSION
-
-    #system images
-    - sys-img-armeabi-v7a-android-$EMULATOR_API_VERSION
-
 before_install:
   - chmod +x gradlew
   - yes | sdkmanager "platforms;android-29"
   - yes | sdkmanager "build-tools;29.0.3"
+  - yes | sdkmanager "system-images;android-29;google_apis;x86"
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -44,7 +38,7 @@ cache:
 
 before_script:
   - android list targets
-  - echo no | android create avd --force -n test -t android-$EMULATOR_API_VERSION --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-$EMULATOR_API_VERSION --abi x86
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
