--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ cache:
 
 before_script:
   - android list targets
-  - echo no | android create avd --force -n test -k "system-images;android-29;google_apis;x86"
+  - avdmanager create avd -n test -k "system-images;android-29;google_apis;x86"
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
