--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ android:
 
 before_install:
   - chmod +x gradlew
+  - touch ~/.android/repositories.cfg
   - yes | sdkmanager "platform-tools" "platforms;android-29"
   - yes | sdkmanager "build-tools;29.0.3"
   - yes | sdkmanager "system-images;android-29;google_apis;x86"
