--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ cache:
     - $HOME/.android/build-cache
 
 before_script:
-  - avdmanager create avd -n test -k "system-images;android-29;google_apis;x86"
+  - no | avdmanager create avd -n test -k "system-images;android-29;google_apis;x86"
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
