--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ before_install:
   - yes | sdkmanager "tools"
   - yes | sdkmanager "platforms;android-29" | grep -v = || true
   - yes | sdkmanager "build-tools;29.0.3" | grep -v = || true
-  - yes | sdkmanager "system-images;android-29;google_apis;x86" | grep -v = || true
-  - echo no | avdmanager create avd --force -n test -k "system-images;android-29;google_apis;x86"
-  - emulator -avd test -no-audio -no-window &
+  - yes | sdkmanager "system-images;android-29;google_apis;x86_64" | grep -v = || true
+  - echo no | avdmanager create avd --force -n test -k "system-images;android-29;google_apis;x86_64"
+  - emulator -avd test -no-audio -no-window
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
