--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 # ./travis.yml for MSAL android
-language: android
+language: bash
+dist: bionic
 jdk: oraclejdk8
-
-# Don't use the Travis Container-Based Infrastructure
-sudo: true
 
 # Build Variables
 env:
@@ -26,8 +24,21 @@ before_install:
   - yes | sdkmanager "platforms;android-29" | grep -v = || true
   - yes | sdkmanager "build-tools;29.0.3" | grep -v = || true
   - yes | sdkmanager --install "system-images;android-29;google_apis;x86_64" | grep -v = || true
+    
+    # Set up KVM on linux for hardware acceleration. Manually here so it only happens for emulator tests, takes ~30s
+  - travis_retry sudo -E apt-get -yq --no-install-suggests --no-install-recommends install bridge-utils libpulse0 libvirt-bin qemu-kvm virtinst ubuntu-vm-builder
+  - sudo adduser $USER libvirt
+  - sudo adduser $USER kvm
+
+  #Create emulator
   - echo no | avdmanager create avd --force -n test -k "system-images;android-29;google_apis;x86_64"
-  - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window
+
+  # This double "sudo" monstrosity is used to have Travis execute the
+  # emulator with its new group permissions and help preserve the rule
+  # of least privilege.
+  - sudo -E sudo -u $USER -E bash -c "$ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &"
+
+  
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
