--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 # ./travis.yml for MSAL android
 language: minimal
 dist: bionic
-jdk: openjdk10
 
 # Build Variables
 env:
@@ -13,8 +12,7 @@ env:
 
 before_install:
   # set JAVA_HOME path
-  #- export JAVA_HOME=/usr/lib/jvm/java-10-openjdk-amd64
-  - whereis java
+  - export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
   # download and unzip Android SDK command line tools
   - wget -nv https://dl.google.com/android/repository/$ADNDROID_TOOLS
   - unzip -q $ADNDROID_TOOLS -d $HOME/sdk
