--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
 before_install:
   # set JAVA_HOME path
   - export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+  - echo $JAVA_HOME
   # download and unzip Android SDK command line tools
   - wget -nv https://dl.google.com/android/repository/$ADNDROID_TOOLS
   - unzip -q $ADNDROID_TOOLS -d $HOME/sdk
