--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - yes | sdkmanager "tools" | grep -v = || true
   - yes | sdkmanager "platforms;android-29" | grep -v = || true
   - yes | sdkmanager "build-tools;29.0.3" | grep -v = || true
-  - yes | sdkmanager "system-images;android-29;google_apis;x86_64" | grep -v = || true
+  - yes | sdkmanager --install "system-images;android-29;default;x86_64" | grep -v = || true
     
     # Set up KVM on linux for hardware acceleration. Manually here so it only happens for emulator tests, takes ~30s
   - travis_retry sudo -E apt-get -yq --no-install-suggests --no-install-recommends install bridge-utils libpulse0 libvirt-bin qemu-kvm virtinst ubuntu-vm-builder
@@ -33,7 +33,7 @@ before_install:
   - sudo adduser $USER kvm
 
   #Create emulator
-  - echo no | avdmanager create avd --force -n test -k "system-images;android-29;google_apis;x86_64"
+  - echo no | avdmanager create avd --force -n test -k "system-images;android-29;default;x86_64"
 
   # This double "sudo" monstrosity is used to have Travis execute the
   # emulator with its new group permissions and help preserve the rule
