--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ before_install:
   - mkdir -p $HOME/.android && touch $HOME/.android/repositories.cfg
   - chmod +x gradlew
   - yes | sdkmanager "tools" | grep -v = || true
-  - yes | sdkmanager "platforms;android-29" | grep -v = || true
-  - yes | sdkmanager "build-tools;29.0.3" | grep -v = || true
+  - yes | sdkmanager --install "platforms;android-29" | grep -v = || true
+  - yes | sdkmanager --install "build-tools;29.0.3" | grep -v = || true
   - yes | sdkmanager --install "system-images;android-29;default;x86_64" | grep -v = || true
     
     # Set up KVM on linux for hardware acceleration. Manually here so it only happens for emulator tests, takes ~30s
