--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
 
 before_install:
   # download and unzip Android SDK command line tools
-  - wget -nv https://dl.google.com/android/repository/$ADNDROID_TOOLS
+  - wget -nv https://dl.google.com/android/repository/$ANDROID_TOOLS
   - unzip -q $ANDROID_TOOLS -d $HOME/sdk
   # set SDK tools path variable and ANDROID_HOME
   - export ANDROID_BIN=$HOME/sdk/tools/bin
