--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,11 @@ before_install:
   # create empty cfg file to prevent sdkmanager warning message
   - mkdir -p $HOME/.android && touch $HOME/.android/repositories.cfg
   - chmod +x gradlew
-  - $ANDROID_BIN/sdkmanager --update --sdk_root=$ANDROID_HOME
-  - yes | $ANDROID_BIN/sdkmanager --install "tools" --sdk_root=$ANDROID_HOME | grep -v = || true
-  - yes | $ANDROID_BIN/sdkmanager --install "platforms;android-29" --sdk_root=$ANDROID_HOME | grep -v = || true
-  - yes | $ANDROID_BIN/sdkmanager --install "build-tools;29.0.3" --sdk_root=$ANDROID_HOME | grep -v = || true
-  - yes | $ANDROID_BIN/sdkmanager --install "system-images;android-29;default;x86_64" --sdk_root=$ANDROID_HOME | grep -v = || true
+  - $ANDROID_BIN/sdkmanager --update --sdk_root=$ANDROID_HOME --no_https --verbose
+  - yes | $ANDROID_BIN/sdkmanager --install "tools" --sdk_root=$ANDROID_HOME --no_https --verbose | grep -v = || true
+  - yes | $ANDROID_BIN/sdkmanager --install "platforms;android-29" --sdk_root=$ANDROID_HOME --no_https --verbose | grep -v = || true
+  - yes | $ANDROID_BIN/sdkmanager --install "build-tools;29.0.3" --sdk_root=$ANDROID_HOME --no_https --verbose | grep -v = || true
+  - yes | $ANDROID_BIN/sdkmanager --install "system-images;android-29;default;x86_64" --sdk_root=$ANDROID_HOME --no_https --verbose | grep -v = || true
     
     # Set up KVM on linux for hardware acceleration. Manually here so it only happens for emulator tests, takes ~30s
   - travis_retry sudo -E apt-get -yq --no-install-suggests --no-install-recommends install bridge-utils libpulse0 libvirt-bin qemu-kvm virtinst ubuntu-vm-builder
