--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ env:
 before_install:
   # download and unzip Android SDK command line tools
   - sudo apt install openjdk-8-jdk
+  - export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64 
   - echo $JAVA_HOME
-  - sudo update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java
+  #- sudo update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java
   - wget -nv https://dl.google.com/android/repository/$ANDROID_TOOLS
   - unzip -q $ANDROID_TOOLS -d $HOME/sdk
   # set SDK tools path variable and ANDROID_HOME
