--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ before_install:
   # This double "sudo" monstrosity is used to have Travis execute the
   # emulator with its new group permissions and help preserve the rule
   # of least privilege.
-  - sudo -E sudo -u $USER -E bash -c "$ANDROID_BIN/emulator/emulator -avd test -no-audio -no-window &"
+  - sudo -E sudo -u $USER -E bash -c "$ANDROID_BIN/emulator/emulator -avd test -no-audio -no-window"
 
   
 
@@ -55,7 +55,6 @@ cache:
     - $HOME/.android/build-cache
 
 before_script:
-  - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
 script:
