--- a/.travis.yml
+++ b/.travis.yml
@@ -38,10 +38,7 @@ before_install:
   #Create emulator
   - echo no | $ANDROID_BIN/avdmanager create avd --force -n test -k "system-images;android-29;default;x86_64"
 
-  # This double "sudo" monstrosity is used to have Travis execute the
-  # emulator with its new group permissions and help preserve the rule
-  # of least privilege.
-  - sudo -E sudo -u $USER -E bash -c "$ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window"
+  - sudo -E bash -c "$ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window"
 
   
 
