--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_install:
   - yes | $ANDROID_BIN/sdkmanager --install "platforms;android-29" --sdk_root=$ANDROID_HOME --no_https --verbose | grep -v = || true
   - yes | $ANDROID_BIN/sdkmanager --install "build-tools;29.0.3" --sdk_root=$ANDROID_HOME --no_https --verbose | grep -v = || true
   - yes | $ANDROID_BIN/sdkmanager --install "system-images;android-29;default;x86_64" --sdk_root=$ANDROID_HOME --no_https --verbose | grep -v = || true
+  - $ANDROID_BIN/sdkmanager --update --sdk_root=$ANDROID_HOME --no_https --verbose
     
     # Set up KVM on linux for hardware acceleration. Manually here so it only happens for emulator tests, takes ~30s
   - travis_retry sudo -E apt-get -yq --no-install-suggests --no-install-recommends install bridge-utils libpulse0 libvirt-bin qemu-kvm virtinst ubuntu-vm-builder
@@ -40,20 +41,6 @@ before_install:
   - sudo $ANDROID_HOME/platform-tools/adb start-server
   - sudo -E sudo -u $USER -E bash -c "$ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window"
 
-  
-
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache
-
-before_script:
   - adb shell input keyevent 82 &
-
-script:
   - cd $PWD
   - travis_wait ./gradlew clean msal:assembleLocal msal:connectedLocalDebugAndroidTest -PdisablePreDex
