--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,9 @@ before_install:
   #Create emulator
   - echo no | $ANDROID_BIN/avdmanager create avd --force -n test -k "system-images;android-29;default;x86_64"
   - sudo $ANDROID_HOME/platform-tools/adb start-server
-  - sudo -E sudo -u $USER -E bash -c "$ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window"
+  - sudo -E sudo -u $USER -E bash -c "$ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &"
 
-  - adb shell input keyevent 82 &
+  - $ANDROID_HOME/platform-tools/adb wait-for-device
+  - $ANDROID_HOME/platform-tools/adb shell input keyevent 82 &
   - cd $PWD
   - travis_wait ./gradlew clean msal:assembleLocal msal:connectedLocalDebugAndroidTest -PdisablePreDex
