--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ before_install:
   - sudo $ANDROID_HOME/platform-tools/adb start-server
   - sudo -E sudo -u $USER -E bash -c "$ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &"
 
-  - $ANDROID_HOME/platform-tools/adb wait-for-device
-  - $ANDROID_HOME/platform-tools/adb shell input keyevent 82 &
+  - adb wait-for-device
+  - adb shell input keyevent 82 &
   - cd $PWD
   - travis_wait ./gradlew clean msal:assembleLocal msal:connectedLocalDebugAndroidTest -PdisablePreDex
