--- a/msalautomationapp/build.gradle
+++ b/msalautomationapp/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'jacoco'
 
 android {
     signingConfigs {
@@ -39,6 +40,7 @@ android {
 
     buildTypes {
         release {
+            testCoverageEnabled true
             debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -46,6 +48,7 @@ android {
         }
 
         debug {
+            testCoverageEnabled true
             multiDexKeepProguard file('proguard-multidex-rules.pro')
         }
     }
@@ -108,4 +111,18 @@ dependencies {
     }
     androidTestImplementation "androidx.test:runner:$rootProject.ext.androidxTestRunnerVersion"
     androidTestUtil "androidx.test:orchestrator:$rootProject.ext.androidxTestOrchestratorVersion"
+}
+
+task createMsalAutomationCoverageReportTask() {
+    group = "MsalAutomation Reporting"
+    description = "Generate AndroidTests Coverage Report tasks for every build Flavour"
+    android.applicationVariants.all { variant ->
+        def buildVariant = variant.name
+
+        // Tasks for generating Coverage reports for every buildVariant
+        task "${buildVariant}MsalAutomationCoverageReport" (type:JacocoReport, dependsOn: ["create${buildVariant.capitalize()}CoverageReport"]) {
+            group = "MsalAutomation Reporting"
+            description = "Generate MsalAutomation AndroidTests Coverage Reports on the ${buildVariant.capitalize()}"
+        }
+    }
 }
